getTestPlan working here
