# platform/dtf-runner/src/main/java/com/pslcl/dtf/runner/rest/handlers/TestPlansHandler.java
@@ -3,14 +3,12 @@ package com.pslcl.dtf.runner.rest.handlers;
 import com.cstkit.common.FutureUtil;
 import com.cstkit.common.web.ErrorCodes;
 import com.cstkit.common.web.HttpStatus;
-import com.cstkit.common.web.TokenInfo;
 import com.cstkit.common.web.VertxUtil;
-import com.pslcl.dtf.core.runner.rest.RestVersion;
 import com.pslcl.dtf.core.runner.rest.module.Modules;
-import com.pslcl.dtf.core.runner.rest.testPlan.Test;
-import com.pslcl.dtf.core.storage.DTFStorage;
-import com.pslcl.dtf.core.util.executor.BlockingExecutor;
+import com.pslcl.dtf.core.runner.rest.testPlan.TestPlan;
+import com.pslcl.dtf.core.runner.rest.testPlan.TestPlans;
 import com.pslcl.dtf.runner.rest.RestServiceInstance;
+import com.pslcl.dtf.runner.rest.storage.NotFoundException;
 import com.pslcl.dtf.runner.rest.storage.RestServiceStorage;
 import io.vertx.core.Handler;
 import io.vertx.core.http.HttpMethod;
@@ -115,7 +113,40 @@ public final class TestPlansHandler implements Handler<RoutingContext>
 
     private void getPlan(RoutingContext context, String planId)
     {
-        VertxUtil.errorResponse(context, HttpStatus.INTERNAL_SERVER_ERROR, ErrorCodes.INTERNAL_SERVER_ERROR, "Not implemented yet: " + context.request().method());
+        HttpServerRequest request = context.request();
+        try
+        {
+            String filter = request.getParam(Modules.FilterParam);
+            String after = request.getParam(TestPlan.AfterParam);
+            storage.getTestPlan(planId, filter, after).handle((plan, t) ->
+            {
+                try
+                {
+                    if(t != null)
+                        throw FutureUtil.unwrap(t);
+                    VertxUtil.jsonResponse(context, HttpStatus.OK, plan.toJson());
+                    //noinspection ReturnOfNull
+                    return null;
+                }
+                catch(NotFoundException ignored)
+                {
+                    VertxUtil.errorResponse(context, HttpStatus.BAD_REQUEST, ErrorCodes.NOT_FOUND, ignored.getMessage());
+                    //noinspection ReturnOfNull
+                    return null;
+                }
+                catch(Throwable throwable)
+                {
+                    logger.warn("Internal error", throwable);
+                    VertxUtil.errorResponse(context, HttpStatus.INTERNAL_SERVER_ERROR, ErrorCodes.INTERNAL_SERVER_ERROR, "An internal storage error has occured");
+                    //noinspection ReturnOfNull
+                    return null;
+                }
+            });
+        }catch(Throwable t)
+        {
+            logger.warn("Internal error", t);
+            VertxUtil.errorResponse(context, HttpStatus.INTERNAL_SERVER_ERROR, ErrorCodes.INTERNAL_SERVER_ERROR, "An internal handler error has occured");
+        }
     }
 
     private void getTests(RoutingContext context, String planId)
